feat: simplify property filtering by using toList() method
Co-authored-by: Copilot <copilot@github.com>